--- a/2.1-first-component/index.html
+++ b/2.1-first-component/index.html
@@ -9,8 +9,8 @@
   <!-- container node -->
   <div id="app"></div>
 
-  <script src="http://fb.me/react-0.11.1.js"></script>
-  <script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
+  <script src="http://fb.me/react-0.13.1.js"></script>
+  <script src="http://fb.me/JSXTransformer-0.13.1.js"></script>
   <script type="text/jsx">
     /** @jsx React.DOM */
 
@@ -22,7 +22,7 @@
       }
     });
 
-    React.renderComponent(
+    React.render(
       <MessageBox />,
       document.getElementById('app'),
       function () {
